--- a/SeguimientoProyectosASP.NET/Views/Proyectos/Index.cshtml
+++ b/SeguimientoProyectosASP.NET/Views/Proyectos/Index.cshtml
@@ -9,17 +9,12 @@
         <div class="panel panel-primary">
             <div class="panel-heading">
                 Listado de Proyectos
+                @Html.ActionLink("Agregar Nuevo", "Create", "Proyectos", new { area = "" }, new { @class = "btn btn-success btn-sm pull-right" })
             </div>
             <div class="panel-body">
                 <div class="row">
-                    <div class="col-lg-12">
-                        @Html.ActionLink("Agregar Proyecto", "Create")
-                    </div>
-                </div>
-                <div class="row"><div class="col-lg-12">&nbsp;</div></div>
-                <div class="row">
                     <div class="col-lg-12 table-responsive">
-                        <table class="table table-striped table-bordered table-hover" id="dataTables.proyectyos">
+                        <table class="table table-striped table-bordered table-hover dataTable" id="dataTables.proyectyos">
                             <thead>
                                 <tr>
                                     <th>@Html.DisplayNameFor(model => model.nombre)</th>
@@ -54,11 +49,10 @@
         </div>
     </div>
 </div>
-@Scripts.Render("~/Scripts/dataTables.jquery.js")
-@Scripts.Render("~/Scripts/dataTables.bootstrap.js")
-<script type="text/javascript">
-    $(document).ready(function () {
-        $('#dataTables.proyectyos').dataTable({
+@section Scripts{
+    <script type="text/javascript">
+        $("#dataTables.proyectyos").dataTable({
+
         });
-    });
-</script>
+    </script>
+}
