--- a/SeguimientoProyectosASP.NET/Views/Proyectos/Index.cshtml
+++ b/SeguimientoProyectosASP.NET/Views/Proyectos/Index.cshtml
@@ -1,4 +1,9 @@
 ﻿@model IEnumerable<SeguimientoProyectosASP.NET.Models.Proyecto>
+@{
+    ViewBag.Title = "Index";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+
 <div class="row">
     <div class="col-lg-12">
         <h1 class="well page-header"><i class="fa fa-archive"></i> Módulo de Proyectos</h1>
@@ -9,12 +14,12 @@
         <div class="panel panel-primary">
             <div class="panel-heading">
                 Listado de Proyectos
-                @Html.ActionLink("Agregar Nuevo", "Create", "Proyectos", new { area = "" }, new { @class = "btn btn-success btn-sm pull-right" })
+                @Html.ActionLink("Nuevo Proyecto", "Create", "Proyectos", new { area = "" }, new { @class = "btn btn-success btn-sm" })
             </div>
             <div class="panel-body">
                 <div class="row">
                     <div class="col-lg-12 table-responsive">
-                        <table class="table table-striped table-bordered table-hover dataTable" id="dataTables.proyectyos">
+                        <table class="table table-striped table-bordered table-hover dataTable" id="dataTablesProyectyos">
                             <thead>
                                 <tr>
                                     <th>@Html.DisplayNameFor(model => model.nombre)</th>
@@ -22,7 +27,7 @@
                                     <th>@Html.DisplayNameFor(model => model.fecha_inicio)</th>
                                     <th>@Html.DisplayNameFor(model => model.fecha_fin)</th>
                                     <th>@Html.DisplayNameFor(model => model.Usuario.nombres)</th>
-                                    <!--<th>Mantenimiento</th>-->
+                                    <th>Mantenimiento</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -34,11 +39,11 @@
                                         <td>@Html.DisplayFor(modelItem => item.fecha_inicio)</td>
                                         <td>@Html.DisplayFor(modelItem => item.fecha_fin)</td>
                                         <td>@Html.DisplayFor(modelItem => item.Usuario.nombres)</td>
-                                        <!--<td>
+                                        <td>
                                             @Html.ActionLink("Edit", "Edit", new { id = item.codigo }) |
                                             @Html.ActionLink("Details", "Details", new { id = item.codigo }) |
                                             @Html.ActionLink("Delete", "Delete", new { id = item.codigo })
-                                        </td>-->
+                                        </td>
                                     </tr>
                                 }
                             </tbody>
@@ -49,10 +54,9 @@
         </div>
     </div>
 </div>
+
 @section Scripts{
     <script type="text/javascript">
-        $("#dataTables.proyectyos").dataTable({
-
-        });
+        $("#dataTablesProyectyos").dataTable({});
     </script>
 }
