--- a/SeguimientoProyectosASP.NET/Views/Tareas/Index.cshtml
+++ b/SeguimientoProyectosASP.NET/Views/Tareas/Index.cshtml
@@ -5,42 +5,55 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+<div class="row">
+    <div class="col-lg-12">
+        <h1 class="well page-header"><i class="fa fa-tasks"></i> Módulo de Tareas</h1>
+    </div>
+</div>
+<div class="row">
+    <div class="col-lg-12">
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                Listado de Tareas
+                @Html.ActionLink("Nueva Tarea", "Create", "Tareas", new { area = "" }, new { @class = "btn btn-success btn-sm" })
+            </div>
+            <div class="panel-body">
+                <div class="row">
+                    <div class="col-lg-12 table-responsive">
+                        <table class="table table-striped table-bordered table-hover dataTable" id="dataTablesTareas">
+                            <thead>
+                                <tr>
+                                    <th>@Html.DisplayNameFor(model => model.nombre)</th>
+                                    <th>@Html.DisplayNameFor(model => model.descripcion)</th>
+                                    <th>@Html.DisplayNameFor(model => model.Proyecto.nombre)</th>
+                                    <th>Mantenimiento</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @foreach (var item in Model)
+                                {
+                                    <tr>
+                                        <td>@Html.DisplayFor(modelItem => item.nombre)</td>
+                                        <td>@Html.DisplayFor(modelItem => item.descripcion)</td>
+                                        <td>@Html.DisplayFor(modelItem => item.Proyecto.nombre)</td>
+                                        <td>
+                                            @Html.ActionLink("Edit", "Edit", new { id = item.codigo }) |
+                                            @Html.ActionLink("Details", "Details", new { id = item.codigo }) |
+                                            @Html.ActionLink("Delete", "Delete", new { id = item.codigo })
+                                        </td>
+                                    </tr>
+                                }
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.nombre)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.descripcion)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Proyecto.nombre)
-        </th>
-        <th></th>
-    </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.nombre)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.descripcion)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Proyecto.nombre)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.codigo }) |
-            @Html.ActionLink("Details", "Details", new { id=item.codigo }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.codigo })
-        </td>
-    </tr>
+@section Scripts{
+    <script type="text/javascript">
+        $("#dataTablesTareas").dataTable({});
+    </script>
 }
-
-</table>
